--- a/src/manifest.json
+++ b/src/manifest.json
@@ -29,7 +29,8 @@
             "defaultSize": {
                 "width": 300,
                 "height": 625
-            }
+            },
+            "sandbox": ["allow-scripts", "allow-same-origin"]
         }
     ]
 }
